--- a/client/src/pages/Create.css
+++ b/client/src/pages/Create.css
@@ -1,15 +1,18 @@
-.container {
-  background-image: url("../images/create-recipe.jpg");
-  background-size: 1500px;
+.create-container {
+  /* background-image: url("../images/create-recipe.jpg"); */
+  /* background-size: 1500px; */
+  /* background-size: cover; */
+
 }
 
 .create-recipe-card {
   max-width: 550px;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   padding: 40px;
   margin: 20px auto;
-  border-radius: 5px;
+  /* border-radius: 5px; */
   background-color: #fdf6e3;
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1)
 }
 
 .recipe-form {
