finished homepage and fixed bugs on home and browse page

--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,10 +1,5 @@
-.logo {
-  display: flex;
-  justify-content: start;
-}
-
-.navbar--container {
-  max-width: 1100px;
+.navbar__container {
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
   display: flex;
@@ -14,12 +9,23 @@
 }
 
 .navbar {
-  height: 60px;
+  height: 80px;
   background-color: #fef7e5;
   position: relative;
 }
 
-.navbar--menu-icon{
+.navbar__logo {
+  /* display: flex;
+  justify-content: start; */
+  max-height: 100%;
+}
+
+.navbar__logo img {
+  max-height: 100px;
+}
+
+
+.navbar__menu-icon{
   display:none;
 }
 
@@ -45,7 +51,7 @@
 }
 
 .nav-elements ul a {
-  font-size: 16px;
+  font-size:18px;
   font-weight: 400;
   text-decoration: none;
   color: #2f234f;
@@ -74,7 +80,7 @@
 }
 
 @media (max-width: 830px) {
-  .navbar--menu-icon {
+  .navbar__menu-icon {
     display: block;
     cursor: pointer;
   }
