--- a/client/src/pages/Browse.css
+++ b/client/src/pages/Browse.css
@@ -8,12 +8,40 @@
   font-display: swap;
 }
 
+.page-container{
+  max-width: 1350px;
+  margin: 20px auto 40px auto;
+  padding: 20px 50px;
+  height: 100%;
+  min-height: 100vh;
+}
+
+
 .browse-container{
+  max-width: 100%;
+  /* margin: 20px auto 40px auto;
+  padding: 20px 50px;
+  height: 100%;
+  min-height: 100vh; */
+  /* display: flex; */
+  /* flex-wrap: wrap; */
+  /* width: 1300px; */
+  /* max-width: 100%; */
+  /* height: 100%; */
+  /* background-color: white;
+  margin: 10px auto;
+  justify-content: space-between; */
+  /* justify-content: center; */
+  /* padding: 40px 50px; */
+}
+
+.browse-cards{
   display: flex;
   flex-wrap: wrap;
-  width: 1200px;
-  background-color: white;
-  margin: 10px auto;
+  /* background-color: blue; */
+  justify-content: center;
+  margin: 0 auto;
+  max-width: 100%;
 }
 
 .browse-card{
@@ -22,8 +50,9 @@
   background-color: white;
   width: 261.25px;
   height: 365px;
-  margin: 15px;
+  /* margin: 15px; */
   border: 1px solid rgba(0,0,0,.15);
+  max-width: 100%;
 }
 
 .browse-card__image img{
