--- a/client/src/pages/Create.css
+++ b/client/src/pages/Create.css
@@ -2,6 +2,7 @@
   /* background-image: url("../images/create-recipe.jpg"); */
   /* background-size: 1500px; */
   /* background-size: cover; */
+  min-height: 100vh;
 
 }
 
