--- a/client/src/index.css
+++ b/client/src/index.css
@@ -26,12 +26,24 @@ code {
 }
 
 .card{
-  margin: 15px;
+  margin: 0 15px 30px 15px;
+  max-height: 365px;
 }
 
 .app-container {
   position: relative;
 }
+
+form label {
+  display:inline-block;
+  margin: 0px 0px 10px 0px ;
+}
+
+form input,textarea {
+  margin-bottom: 10px;
+  padding: 5px;
+}
+
 
 /* .page-container {
   width: 1350px;
