--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -1,33 +1,52 @@
 .home-container {
   max-width: 1350px;
-  margin: 20px auto 40px auto;
-  padding: 20px 50px;
+  margin: 0 auto 0px auto;
+  padding: 0 50px;
   height: 100%;
   min-height: 100vh;
   /* padding: 40px 50px; */
 }
 
-.banner {
+/* .banner {
   background-image: url("https://images.unsplash.com/photo-1606787503066-794bb59c64bc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80");
   background-size: cover;
   height: 500px;
-}
+} */
 
 .featured-recipes {
-  /* background-image: url("https://images.unsplash.com/photo-1606787503066-794bb59c64bc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80");
-  background-size: cover;
-  backdrop-filter: blur(50px); */
+ 
 
   /* margin: 40px 40px; */
   max-width: 100%;
-  margin-bottom: 80px;
+  padding: 70px 40px 140px 40px;
+  position:relative;
 }
 
+
+.featured-background {
+  /* background-image: url("https://images.unsplash.com/photo-1606787503066-794bb59c64bc?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1770&q=80"); */
+  /* background-size: cover; */
+  /* filter: blur(8px); */
+  background-color: orange;
+  right: 50%;
+  left: 50%;
+  margin-right: -50vw;
+  margin-left: -50vw;
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  height: 100%;
+  top: 0;
+  z-index: -1;
+
+}
+
+
 .featured-recipes__title {
-  margin-bottom: 40px;
-  color: rgb(255, 166, 0);
+  color: rgb(0, 95, 0);
   font-size: 40px;
   text-align: center;
+  margin-bottom: 80px;
 }
 
 .carousel__container {
@@ -64,6 +83,26 @@
   font-size: 25px;
 }
 
+.countries {
+  position: relative;
+  padding: 80px 0px;
+}
+
+.countries-background{
+  background-color: #fcefd2;
+  right: 50%;
+  left: 50%;
+  margin-right: -50vw;
+  margin-left: -50vw;
+  width: 100vw;
+  /* height: 100%; */
+  position: absolute;
+  height: 100%;
+  top: 0;
+  z-index: -1;
+
+}
+
 .countries__title {
   margin-bottom: 40px;
   text-align: center;
@@ -71,15 +110,16 @@
 
 .countries__title h1 {
   font-size: 40px;
-  color: rgb(0, 95, 0);
+  color: orange;
 }
 
 .country-container {
   display: flex;
+  background-color: #fcefd2;
+
   /* width: 1200px; */
   flex-wrap: wrap;
   max-width: 100%;
-  background-color: white;
   margin: 10px auto;
   padding: 40px;
   /* padding: 40px 50px; */
@@ -132,4 +172,12 @@
 
 .country-card__title {
   margin-bottom: 10px;
+}
+
+.to-browse{
+  margin: 40px auto 0 auto;
+}
+
+.to-browse button{
+  font-size: 20px;
 }
