--- a/client/src/index.css
+++ b/client/src/index.css
@@ -39,11 +39,6 @@ form label {
   margin: 0px 0px 10px 0px ;
 }
 
-form input,textarea {
-  margin-bottom: 10px;
-  padding: 5px;
-}
-
 button {
   border-radius: 8px;
   border-style: none;
@@ -52,14 +47,29 @@ button {
   cursor: pointer;
   display: inline-block;
   padding: 5px 16px;
-  /* box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1); */
   border: 1px solid rgba(0, 0, 0, 0.3);
   text-align: center;
   background-color: #efefef;
 }
 
-button:hover, button:focus{
+button:hover{
   background-color: #fffdfd;
+}
+
+input, textarea{
+  display: block;
+    /* width: 100%; */
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
 /* .page-container {
