--- a/client/src/index.css
+++ b/client/src/index.css
@@ -18,7 +18,7 @@ body {
 
   display: flex;
   flex-direction: column;
-  background-color: #fcefd2;
+  background-color: #fff6e5;
   min-height: 100%;
 }
 
