--- a/client/src/pages/About.css
+++ b/client/src/pages/About.css
@@ -11,11 +11,13 @@
   display: flex;
   flex: column;
   flex-wrap: wrap;
-  max-width: 1350px;
+  /* max-width: 1350px; */
+  max-width: 800px;
   margin: 20px auto 40px auto;
   padding: 20px 50px;
   height: 100%;
   min-height: 100vh;
+  background-color: white;
 }
 
 .about__title {
@@ -28,6 +30,7 @@
 
 .about__content h2 {
   margin: 40px 50px 40px 50px;
+  text-align: center;
 }
 
 .about__content p {
