feat: add recipe cards to profile page
- Add user created <RecipeCard/> to profile page
- Update design of profile page to fit recipe cards
- Move <RecipeCard/> CSS away from Browse.css and Index.css to RecipeCard.css for better modularity

--- a/client/src/pages/Browse.css
+++ b/client/src/pages/Browse.css
@@ -96,14 +96,13 @@
   height: 30px;
 }
 
-.browse-cards {
+/* .browse-cards {
   display: flex;
   flex-wrap: wrap;
-  /* background-color: blue; */
   justify-content: center;
   margin: 0 auto;
   max-width: 100%;
-}
+} */
 
 .results-container {
   height: 100%;
