feat: add lazy loading, update UI of app, and add responsiveness
- Add HTML lazy loading for all images
- Update spacing on home page
- Update HTML structure on browse.js
- Add responsive UI to browse.js
- Update message for when recipes are not found on browse page
- Update UI of components on browse.js
- Update responsive navbar to make it interactable

--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -186,6 +186,7 @@ height: 0px;} */
   }
 
   .nav-elements {
+    display: flex;
     position: absolute;
     right: 0;
     top: 60px;
@@ -194,6 +195,11 @@ height: 0px;} */
     height: calc(100vh-60px);
     transition: all 0.3s ease-in;
     overflow:hidden;
+    z-index: 1;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 30px;
   }
 
   .nav-elements.active{
