--- a/client/src/components/RecipeCard.css
+++ b/client/src/components/RecipeCard.css
@@ -7,6 +7,52 @@
     width: 100%;
 }
 
+.browse-card {
+    display: flex;
+    flex-direction: column;
+    background-color: #fff6e5;
+    width: 241.25px;
+    height: 325px;
+    border: 1px solid black;
+    max-width: 100%;
+    box-shadow: 1px 2px black;
+  }
+  
+  .browse-card__image {
+    height: 50%;
+  }
+  
+  .browse-card__image img {
+    min-width: 100%;
+    min-height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+  }
+  
+  .browse-card__text {
+    color: black;
+    padding: 0.75rem;
+    height: 50%;
+  }
+  
+  .browse-card__details {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  
+  .browse-card__details p {
+    margin-bottom: 5px;
+    font-size: 12.5px;
+  }
+  
+  #browse-card__country {
+    color: rgb(80, 80, 80);
+  }
+  
+  .browse-card__title {
+    margin-bottom: 2.5px;
+  }
+
 /* .browse-cards {
     display: flex;
     flex-wrap: wrap;
