feat: update button UIs
- Update font size of newsletter submit button
- Update font of all buttons
- Update spacing of country section on home page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -57,6 +57,7 @@ form label {
 
 button {
     /* font-family: 'Montserrat';   */
+    font-family: 'Montserrat';
     font-size:18px;
     font-weight: 600;
     text-decoration: none;
