--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -131,6 +131,7 @@
   display: flex;
   background-color: #fcefd2;
 
+  flex-direction: column;
   /* width: 1200px; */
   flex-wrap: wrap;
   max-width: 100%;
